--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -3,10 +3,10 @@
  <div class="container">
      <header class="jumbotron">
          <div class="container">
-             <h1>Welcome To YelpCamp!</h1>
-             <p>View our hand-picked campgrounds from all over the world</p>
+             <h1>Welcome To SuperAlbumReviews!</h1>
+             <p>View our hand-picked Albums</p>
              <p>
-                <a class="btn btn-primary btn-large" href="/campgrounds/new">Add New Campground</a>
+                <a class="btn btn-primary btn-large" href="/campgrounds/new">Add A New Album</a>
              </p>
          </div>
      </header>
@@ -20,7 +20,7 @@
                        <h4><%= campground.name %></h4>
                    </div>
                    <p>
-                       <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">More Info</a>
+                       <a href="/campgrounds/<%= campground._id %>" class="btn btn-primary">Check Out the Details</a>
                    </p>
                 </div>
             </div>
