--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -2,8 +2,8 @@
 
 <h1>Landing Page!</h1>
 
-<p>Welcome to YelpCamp</p>
+<p>Welcome to SuperAlbumReviews!</p>
 
-<a href="/campgrounds">View All Campgrounds</a>
+<a href="/campgrounds">View All Albums</a>
 
 <% include partials/footer %>
